--- a/src/directives/src/autoComplete/autoComplete.html
+++ b/src/directives/src/autoComplete/autoComplete.html
@@ -2,6 +2,7 @@
     <input class="hy-complete__input"
         trim
         type="text"
+        maxlength="20"
         v-focus="focus"
         spellcheck="false"
         ng-click="handleClick()"
