--- a/src/directives/src/select/select.html
+++ b/src/directives/src/select/select.html
@@ -1,6 +1,6 @@
 <div class="hy-select__panel" ng-class="{'is-disabled': disabled}" ng-contains="handleClosed()">
     <div class="hy-select__input-panel" ng-class="{'is-focus': showDropdown, 'is-hover': hover}" ng-click="handlerFocus($event)" ng-mouseleave="mouseleave()" ng-mouseenter="mouseenter()">
-        <input class="hy-select__input"
+        <input class="form-control"
             trim
             type="text"
             ng-disabled="!filterable || disabled"
