--- a/src/directives/src/checkbox/checkbox.html
+++ b/src/directives/src/checkbox/checkbox.html
@@ -1,8 +1,6 @@
-<label role="checkbox" class="checkbox__wraper" ng-class="{'is-checked': isChecked}" aria-checked="{{ indeterminate ? 'mixed': isChecked" }}">
+<label role="checkbox" class="checkbox__wraper" ng-class="{'is-checked': isChecked, 'is-disabled': disabled}" aria-checked="{{ indeterminate ? 'mixed': isChecked" }}">
     <span aria-checked="{{ indeterminate ? 'mixed': isChecked" }}" class="checkbox__input" ng-class="{'is-checked': isChecked, 'is-indeterminate': indeterminate, 'is-disabled': disabled}">
         <span class="checkbox__inner"></span>
-        <input type="checkbox" aria-hidden="true" ng-model="isChecked" class="checkbox__original" />
-    </span>
-    <span class="checkbox__label" ng-if="!custom" >{{ label }}</span>
-    <span class="checkbox_label" ng-if="custom" ng-transclude></span>
+        <input type="checkbox" aria-hidden="true" ng-disabled="disabled" ng-model="isChecked" ng-change="handlerChange({val: isChecked})" class="checkbox__original" />
+    </span><span class="checkbox_label" ng-transclude></span>
 </label>
