--- a/src/directives/src/transfer/transfer.html
+++ b/src/directives/src/transfer/transfer.html
@@ -11,8 +11,8 @@
             </div>
             <div class="transfer__content__list" ng-class="{'is-filterable': filterable}">
                 <checkbox v-model="item.isChecked" change="handleChange(val, item, 'left')" disabled="item[props.disabled]" class="transfer__content__item" ng-repeat="item in leftList | filter:leftModel | orderBy:sortIndex">
-                    <span ng-if="render(item)" ng-bind-html="render(item)"></span>
-                    <span ng-if="!render(item)" ng-bind="item[props.label]"></span>
+                    <span ng-if="isCustomRender" ng-bind-html="render(item)"></span>
+                    <span ng-if="!isCustomRender" ng-bind="item[props.label]"></span>
                 </checkbox>
                 <p class="transfer__content__empty" ng-if="!leftList.length">{{ noDataText }}</p>
             </div>
@@ -40,8 +40,8 @@
             </div>
             <div class="transfer__content__list" ng-class="{'is-filterable': filterable}">
                 <checkbox v-model="item.isChecked" change="handleChange(val, item, 'right')" disabled="item[props.disabled]" class="transfer__content__item" ng-repeat="item in rightList | filter:rightModel | orderBy:sortIndex">
-                    <span ng-if="render(item)" ng-bind-html="render(item)"></span>
-                    <span ng-if="!render(item)" ng-bind="item[props.label]"></span>
+                    <span ng-if="isCustomRender" ng-bind-html="render(item)"></span>
+                    <span ng-if="!isCustomRender" ng-bind="item[props.label]"></span>
                 </checkbox>
                 <p class="transfer__content__empty" ng-if="!rightList.length">{{ noDataText }}</p>
             </div>
