--- a/src/directives/src/tree/treeItem.html
+++ b/src/directives/src/tree/treeItem.html
@@ -3,6 +3,7 @@
         <span class="tree-node__expand" ng-class="{'is-visibled': !list}">
             <span class="tree-node__expand-icon" ng-class="{'expanded': visible}"></span>
         </span>
+        <checkbox v-model="vModel"></checkbox>
         <span class="tree-node__label">{{ label }}</span>
     </p>
     <div role="group" class="tree-item_node__children" ng-show="visible" ng-if="list"></div>
