--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -1,25 +1,32 @@
-<div class="v-table">
-    <div class="v-table__header-wrapper">
-        <table cellspacing="0" cellpadding="0" class="v-table__header">
+<div class="el-table" style="width: 100%;">
+    <div class="hidden-columns">
+        <div ng-repeat="item in childList track by $index"></div>
+    </div>
+    <div class="el-table__header-wrapper">
+        <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__header">
+            <colgroup>
+                <col ng-repeat="item in childList track by $index" width="{{ item.width }}">
+                <col name="gutter" width="0">
+            </colgroup>
             <thead class="has-gutter">
-                <tr class="v-table__row"></tr>
+                <tr>
+                    <th colspan="1" rowspan="1" class="is-leaf" ng-repeat="item in childList track by $index">
+                        <div class="cell">{{ item.label }}</div>
+                    </th>
+                    <th class="gutter" style="width: 0px; display: none;"></th>
+                </tr>
             </thead>
         </table>
     </div>
-    <div class="v-table__body-wrapper">
-        <table cellspacing="0" cellpadding="0" class="v-table__body">
+    <div class="el-table__body-wrapper is-scrolling-none">
+        <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__body">
+            <colgroup>
+                <col ng-repeat="item in childList track by $index" width="{{ item.width }}">
+            </colgroup>
             <tbody>
-                <tr v-show="data.length" class="v-table__row" ng-repeat="item in data track by $index">
-                    <td rowspan="1" colspan="1" width="{{value.width}}" ng-repeat="(key, value) in childMap">
-                        <div class="cell">{{item[value.prop]}}</div>
-                    </td>
-                </tr>
-                <!-- <tr v-show="!data.length">
-                    <td rowspan="1" colspan="1" width="{{value.width}}" ng-repeat="(key, value) in childMap">
-                        <div class="cell">{{item[value.prop]}}</div>
-                    </td>
-                </tr> -->
+                <tr class="el-table__row" ng-repeat="item in list track by $index" ng-transclude></tr>
             </tbody>
         </table>
     </div>
+    <div class="el-table__column-resize-proxy" style="display: none;"></div>
 </div>
