--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -1,4 +1,4 @@
-<div class="el-table" style="width: 100%;">
+<div class="el-table el-table--fit el-table--border el-table--group el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition" style="width: 100%;">
     <div class="hidden-columns">
         <div ng-repeat="item in childList track by $index"></div>
     </div>
