--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -1,17 +1,17 @@
 <div class="el-table el-table--fit el-table--border el-table--group el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition" style="width: 100%;">
     <div class="hidden-columns">
-        <div ng-repeat="item in childList track by $index"></div>
+        <div ng-repeat="item in columnList track by $index"></div>
     </div>
     <div class="el-table__header-wrapper">
         <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__header">
             <colgroup>
-                <col ng-repeat="item in childList track by $index" width="{{ item.width }}">
+                <col ng-repeat="item in columnList track by $index" width="{{ item.width }}">
                 <col name="gutter" width="0">
             </colgroup>
             <thead class="has-gutter">
                 <tr>
-                    <th colspan="1" rowspan="1" class="is-leaf" ng-repeat="item in childList track by $index">
-                        <div class="cell">{{ item.label }}</div>
+                    <th colspan="1" rowspan="1" class="is-leaf" ng-repeat="item in columnList track by $index">
+                        <div class="cell">{{ item.title }}</div>
                     </th>
                     <th class="gutter" style="width: 0px; display: none;"></th>
                 </tr>
@@ -21,12 +21,22 @@
     <div class="el-table__body-wrapper is-scrolling-none">
         <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__body">
             <colgroup>
-                <col ng-repeat="item in childList track by $index" width="{{ item.width }}">
+                <col ng-repeat="item in columnList track by $index" width="{{ item.width }}">
             </colgroup>
             <tbody>
-                <tr class="el-table__row" ng-repeat="item in list track by $index" ng-transclude></tr>
+                <tr class="el-table__row" ng-repeat="item in list track by $index">
+                    <td rowspan="1" colspan="1" ng-repeat="im in columnList track by $index">
+                        <div class="cell">{{item[im.key]}}</div>
+                    </td>
+                </tr>
+                <tr class="el-table__row" ng-if="!list.length">
+                    <td rowspan="1" colspan="{{ columnList.length }}">
+                        <div class="table-noData">暂无数据</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
+
     </div>
     <div class="el-table__column-resize-proxy" style="display: none;"></div>
 </div>
