--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -8,6 +8,7 @@
     <div class="el-table__body-wrapper">
         <table-body
             row-list="list"
+            col-list="colList"
             ></table-body>
     </div>
 </div>
