--- a/src/directives/src/table/table-header.html
+++ b/src/directives/src/table/table-header.html
@@ -1,10 +1,10 @@
 <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__header">
     <colgroup>
-        <col ng-repeat="item in colList track by $index" width="{{ item.width }}">
+        <col ng-repeat="item in colList track by $index" name="{{ item.className }}" width="{{ item.width }}">
     </colgroup>
     <thead class="has-gutter">
         <tr>
-            <th colspan="1" rowspan="1" class="{{ item.align ? 'is-' + item.align : '' }} is-leaf" ng-repeat="item in colList track by $index">
+            <th colspan="1" rowspan="1" class="{{ item.className }} {{ item.align ? 'is-' + item.align : '' }} is-leaf" ng-repeat="item in colList track by $index">
                 <div class="cell">{{ item.label }}</div>
             </th>
         </tr>
