fix: 调整table组件细节

--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -3,12 +3,14 @@
     <div class="el-table__header-wrapper">
         <table-header
             col-list="colList"
+            table-width="tableWidth"
             ></table-header>
     </div>
     <div class="el-table__body-wrapper">
         <table-body
             row-list="list"
             col-list="colList"
+            table-width="tableWidth"
             ></table-body>
     </div>
 </div>
