--- a/src/directives/src/table/table-body.html
+++ b/src/directives/src/table/table-body.html
@@ -9,7 +9,7 @@
             </td>
         </tr>
         <tr class="el-table__row" ng-if="!rowList.length">
-            <td rowspan="1" colspan="{{ rowList.length }}">
+            <td rowspan="1" colspan="{{ colList.length }}">
                 <div class="table-noData">暂无数据</div>
             </td>
         </tr>
