--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -1,4 +1,4 @@
-<div class="el-table" ng-class="{'el-table--scrollable-x': is_scroll_x, 'el-table--scrollable-y': is_scroll_y}" style="width: 100%;">
+<div class="el-table el-table--enable-row-hover" ng-class="{'el-table--scrollable-x': is_scroll_x, 'el-table--scrollable-y': is_scroll_y}" style="width: 100%;">
     <div class="hidden-columns" ng-transclude></div>
     <div class="el-table__header-wrapper">
         <table-header
