--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -3,7 +3,8 @@
     ng-class="{
         'el-table--scrollable-x': is_scroll_x,
         'el-table--scrollable-y': is_scroll_y,
-        'el-table--striped': stripe
+        'el-table--striped': stripe,
+        'el-table--border': border
         }"
     >
     <div class="hidden-columns" ng-transclude></div>
