--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -8,7 +8,7 @@
         }"
     >
     <div class="hidden-columns" ng-transclude></div>
-    <div class="el-table__header-wrapper is-scrolling-{{ row_scrolling_placment }}">
+    <div class="el-table__header-wrapper">
         <table-header
             col-list="colList"
             table-width="tableWidth"
