--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -11,6 +11,7 @@
     <div class="hidden-columns" ng-transclude></div>
     <div class="el-table__header-wrapper">
         <table-header
+            gutter="is_scroll_y"
             col-list="colList"
             table-width="tableWidth"
             ></table-header>
