--- a/src/directives/src/table/table-header.html
+++ b/src/directives/src/table/table-header.html
@@ -1,12 +1,14 @@
 <table width="{{tableWidth}}" cellspacing="0" cellpadding="0" border="0" class="el-table__header">
     <colgroup>
         <col ng-repeat="item in colList track by $index" name="{{ item.className }}" width="{{ item.width }}">
+        <col name="gutter" ng-show="hasGutterWidth" width="{{ hasGutterWidth }}">
     </colgroup>
     <thead class="has-gutter">
         <tr>
             <th colspan="1" rowspan="1" class="{{ item.className }} {{ item.align ? 'is-' + item.align : '' }} is-leaf" ng-repeat="item in colList track by $index">
                 <div class="cell">{{ item.label }}</div>
             </th>
+            <th class="gutter" ng-show="hasGutterWidth" ng-style="{width: hasGutterWidth + 'px'}"></th>
         </tr>
     </thead>
 </table>
