--- a/src/directives/src/table/table.html
+++ b/src/directives/src/table/table.html
@@ -24,4 +24,23 @@
             table-width="tableWidth"
             ></table-body>
     </div>
+    <div class="el-table__fixed">
+        <div class="el-table__fixed-header-wrapper">
+            <table-header
+                fixed="left"
+                gutter="is_scroll_y"
+                col-list="colList"
+                table-width="tableWidth"
+                ></table-header>
+        </div>
+        <div class="el-table__fixed-body-wrapper">
+            <table-body
+                fixed="left"
+                stripe="stripe"
+                row-list="list"
+                col-list="colList"
+                table-width="tableWidth"
+                ></table-body>
+        </div>
+    </div>
 </div>
