--- a/src/directives/src/table/table-body.html
+++ b/src/directives/src/table/table-body.html
@@ -7,8 +7,8 @@
             ng-class="{'el-table__row--striped': stripe && ($index % 2 !== 0)}"
             ng-repeat="item in rowList track by $index">
             <td rowspan="1" colspan="1"
-                class="{{ im.className }} {{ im.align ? 'is-' + im.align : '' }}"
-                ng-class="{'is-hidden': im.fixed}"
+                class="{{ im.className }}"
+                ng-class="{{ classes(im) }}"
                 ng-repeat="im in colList track by $index">
                 <div class="cell">{{item[im.prop]}}</div>
             </td>
